Routing and Navigation

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,16 +1,28 @@
+<!-- <mvc:View
+    controllerName="sap.ui.demo.walkthrough.controller.App"
+    xmlns="sap.m"
+xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true">
+    <App class="myAppDemoWT" id="app">
+<pages>
+            <Page title="{i18n>homePageTitle}">
+                <content>
+                    <mvc:XMLView
+viewName="sap.ui.demo.walkthrough.view.HelloPanel" />
+                    <mvc:XMLView
+viewName="sap.ui.demo.walkthrough.view.InvoiceList" />
+                </content>
+            </Page>
+</pages>
+    </App>
+</mvc:View> -->
+
 <mvc:View
     controllerName="sap.ui.demo.walkthrough.controller.App"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc"
     displayBlock="true">
-    <App class="myAppDemoWT">
-        <pages>
-            <Page title="{i18n>homePageTitle}">
-                <content>
-                    <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.HelloPanel" />
-                    <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.InvoiceList" />
-                </content>
-            </Page>
-        </pages>
-    </App>
+    <Shell>
+        <App class="myAppDemoWT" id="app" />
+    </Shell>
 </mvc:View>
