--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -7,12 +7,12 @@
         class="sapUiResponsiveMargin"
         width="auto"
         items="{
-            path: 'invoice>/Invoices',
-            sorter: {
-                path : 'ShipperName',
+			path : 'invoice>/Invoices',
+			sorter : {
+				path : 'ShipperName',
 				group : true
-            }
-        }">
+			}
+		}">
         <headerToolbar>
             <Toolbar>
                 <Title text="{i18n>invoiceListTitle}" />
@@ -24,20 +24,22 @@
             <ObjectListItem
                 title="{invoice>Quantity} x {invoice>ProductName}"
                 number="{
-                    parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
-                    type: 'sap.ui.model.type.Currency',
-                    formatOptions: {
-                        showMeasure: false
-                    }
-                }"
+					parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
+					type: 'sap.ui.model.type.Currency',
+					formatOptions: {
+						showMeasure: false
+					}
+				}"
                 numberUnit="{view>/currency}"
-                numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success'}">
+                numberState="{=	${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"
+                type="Navigation"
+                press=".onPress">
                 <firstStatus>
                     <ObjectStatus
                         text="{
-                            path: 'invoice>Status',
-                            formatter: '.formatter.statusText'
-                        }" />
+						path: 'invoice>Status',
+						formatter: '.formatter.statusText'
+					}" />
                 </firstStatus>
             </ObjectListItem>
         </items>
